--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./dist/app.js" type="module"></script>
-    <link rel="stylesheet" href="./dist/bundle.css" />
+    <link rel="stylesheet" href="./assets/bundle-nTtkI8wt.css" />
     <link rel="stylesheet" href="./static/global.css" />
 </head>
 
